Add dashboard, upgrade payment, search student by name and marketer

--- a/prime_admin/templates/lms/client_edit_modal.html
+++ b/prime_admin/templates/lms/client_edit_modal.html
@@ -88,9 +88,25 @@
                         <div class="card-body">
                             <h5 class="card-title">Update Payment & Materials</h5>
                             <div class="form-row">
+                                <div class="col-md-3 mb-3">
+                                </div>
+
+                                <div class="col-md-6 mb-3">
+                                    <div class="position-relative form-group">
+                                        <div>
+                                            <div class="custom-checkbox custom-control">
+                                                <input name="chkbox_upgrade" type="checkbox" id="chkbox_upgrade" class="custom-control-input">
+                                                <label class="custom-control-label" for="chkbox_upgrade"><strong>INSTALLMENT TO PREMIUM PAYMENT</strong></label></div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md-3 mb-3">
+                                </div>
+                            </div>
+                            <div class="form-row">
                                 <div class="col-md-6 mb-3">
                                     <label for="new_amount">New Payment</label>
-                                    <input style="font-weight: bold;" type="number" step="1" class="form-control" id="" name="new_amount"
+                                    <input style="font-weight: bold;" type="number" step="1" class="form-control" id="new_amount" name="new_amount"
                                         value="" required>
                                 </div>
 
