--- a/prime_admin/templates/lms/client_view_modal.html
+++ b/prime_admin/templates/lms/client_view_modal.html
@@ -149,6 +149,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button id="btn_print_student_info" type="button" class="btn btn-info">Print Student Information</button>
                 <button id="btn_edit" type="button" class="btn btn-primary">Edit</button>
             </div>
         </div>
