--- a/app/admin/templates/admin/admin_dashboard.html
+++ b/app/admin/templates/admin/admin_dashboard.html
@@ -10,14 +10,40 @@
                     <i class="pe-7s-graph2 icon-gradient bg-mean-fruit">
                     </i>
                 </div>
-                <div>Dashboard
+                <div>User Control Panel
                     <div class="page-title-subheading">
+                        Approve or deactivate system users
                     </div>
                 </div>
             </div>
         </div>
     </div>
+
     <div class="row">
+        <div class="col-md-12">
+            <div class="main-card mb-3 card">
+                <div class="card-header">User Status
+                </div>
+                <div class="table-responsive">
+                    <table id="tbl_user_status" class="align-middle mb-0 table table-borderless table-striped table-hover">
+                        <thead>
+                        <tr>
+                            <th class="text-center">ID</th>
+                            <th>Name</th>
+                            <th class="text-center">Position</th>
+                            <th class="text-center">Status</th>
+                            <th class="text-center">Actions</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- <div class="row">
         <div class="col-md-6 col-xl-4">
             <div class="card mb-3 widget-content bg-midnight-bloom">
                 <div class="widget-content-wrapper text-white">
@@ -70,6 +96,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
+
 </div>
 {% endblock %}
